--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiaqi Liu"
-description              : "Reinforcement learning, decision-making of autonomous driving, and intelligent transportation system."
+description              : "A master student at Tongji. Focusing on autonomous driving, intelligent transportation system and reinforcement learning."
 repository               : "Thirteentj/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
