--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ repository               : "Thirteentj/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      : "G-ZZPBH60P7W" # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Jiaqi Liu"
-  avatar           : "images/photo_ljq.jpg"
+  avatar           : "images/Photo_jiaqi_2024.jpg"
   bio              : "Tongji University"
   location         : "Shanghai, China"
   employer         :
