--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ main:
     url: "/#-academic-services"
     
 
-  # - title: "Invited Talks"
-  #   url: "/#-invited-talks"
+  - title: "CV"
+    url: "https://drive.google.com/file/d/1CzzllddA76fhmEw-vbetz90vVkhjIlZV/view?usp=drive_link"
 
   # - title: "Internships"
   #   url: "/#-internships"
