--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
     
 
   - title: "CV"
-    url: "https://drive.google.com/file/d/1dUvAJMKJxjOt7PPXi89-TSo6Vq2hR1Oq/view?usp=sharing"
+    url: "https://drive.google.com/file/d/1dUvAJMKJxjOt7PPXi89-TSo6Vq2hR1Oq/view?usp=drive_link"
 
   # - title: "Internships"
   #   url: "/#-internships"
